--- a/assets/css/style12hw.css
+++ b/assets/css/style12hw.css
@@ -35,7 +35,7 @@
     .gridbox1{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: auto auto auto;
+        grid-template-rows: auto auto;
         grid-gap: 10px;
         grid-template-areas: "a a a"
                              "b c d";
